--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "highlight.js": "^9.10.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
   }
 }
